[package]

name = "tracer"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "A pet raytracer to test overall pseudo-performance and multi-threading"
repository = "https://github.com/Byron/rust-tracer"
readme = "README.md"
license = "BSD-3-Clause"
license-file = "LICENSE.md"
keywords = ["raytracing", "rendering", "CGI"]

[lib]
name = "tracer"
path = "src/rust/lib.rs"

[[bin]]
name = "rtrace"
path = "src/rust/main.rs"

[dependencies]
time = "*"
docopt = "*"
rustc-serialize = "*"
docopt_macros = "*"