[package]

name = "rtrace"
version = "0.2.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "A pet raytracer to test overall pseudo-performance and multi-threading"
repository = "https://github.com/Byron/rust-tracer"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["raytracing", "rendering", "CGI"]

[lib]
name = "sphere_tracer"
path = "src/rust/lib.rs"

[[bin]]
name = "rtrace"
path = "src/rust/main.rs"

[dependencies]
time = "*"
threadpool = "1"
num = "0.1"
clap = "2"
